@@ -1,3 +1,8 @@
+2009-10-05  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/NRefactoryParameterDataProvider.cs: fixed extension
+	  methods output.
+
 2009-10-02  Mike Krüger  <mkrueger@novell.com>
 
 	* Gui/CSharpTextEditorCompletion.cs: Fixed 'typeof (' context
